@@ -154,6 +154,7 @@
 * StripePI: Update eci format [almalee24] #5097
 * Paymentez: Remove reference_id flag [almalee24] #5081
 * Cybersource Rest: Add support for normalized three ds [aenand] #5105
+* Braintree: Add additional data to response [aenand] #5084
 
 
 == Version 1.135.0 (August 24, 2023)
